[package]
name = "pbo_tools_rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for working with PBO (Packed Bundle Object) files"
authors = ["Tom Campbell <tyen901@gmail.com>"]
license = "MIT"

[dependencies]
thiserror = "2.0.11"
log = "0.4.26"
env_logger = "0.11.6"
encoding_rs = "0.8.35"
tempfile = "3.17.1"
uuid = { version = "1.14.0", features = ["v4"] }
walkdir = "2.5.0"
clap = { version = "4.5.30", features = ["derive"] }
regex = "1.10.2"

[dev-dependencies]
assert_fs = "1.1.2"
predicates = "3.1.3"
env_logger = "0.11.6"
tempfile = "3.17.1"
walkdir = "2.5.0"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"