[package]
name = "pbo_tools"
version = "0.1.0"
edition = "2021"
description = "A Rust library for working with PBO (Packed Bundle Object) files"
authors = ["Tom Campbell <tyen901@gmail.com>"]
license = "MIT"

[lib]
name = "pbo_tools"
path = "src/lib.rs"

[[bin]]
name = "pbo_tools"
path = "src/bin/pbo_tools.rs"

[dependencies]
thiserror = "2.0.12"
log = "0.4.26"
tempfile = "3.19.0"
uuid = { version = "1.16.0", features = ["v4"] }
walkdir = "2.5.0"
clap = { version = "4.5.32", features = ["derive"] }
regex = "1.11.1"
env_logger = "0.11.7"

[dev-dependencies]
env_logger = "0.11.7"
tempfile = "3.19.0"
walkdir = "2.5.0"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"